syntax = "proto3";

package logistics.auth.v1;

option go_package = "logistics/gen/go/auth/v1;authv1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

// =======================================================
//                   LOGIN
// =======================================================

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4; // Секунды до истечения
  UserInfo user = 5;
  string error_message = 6;
}

// =======================================================
//                   REGISTER
// =======================================================

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string full_name = 4;
}

message RegisterResponse {
  bool success = 1;
  string user_id = 2;
  string error_message = 3;
}

// =======================================================
//                   TOKEN OPERATIONS
// =======================================================

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  UserInfo user = 3;
  int64 expires_at = 4; // Unix timestamp
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
  string error_message = 5;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

// =======================================================
//                   USER INFO
// =======================================================

message UserInfo {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string role = 5; // "admin", "user", "viewer"
  int64 created_at = 6;
}
